force-app/main/default/objects/Review__c/fields/Notes_on_Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Notes_on_Value_Proposition__c</fullName>
    <description>Value Proposition comments on the Opportunity.</description>
    <inlineHelpText>Please provide a value proposition comment on the opportunity.</inlineHelpText>
    <label>Notes on Value Proposition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>