force-app/main/default/objects/Review__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>Review Date for the Opportunity.</description>
    <inlineHelpText>Please provide a review date for this opportunity.</inlineHelpText>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>