force-app/main/default/objects/Review__c/validationRules/Review_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Review_Date</fullName>
    <active>true</active>
    <description>Review Date cannot be scheduled before the current date.</description>
    <errorConditionFormula>Review_Date__c &lt; TODAY() &amp;&amp; ISNEW()</errorConditionFormula>
    <errorMessage>The Review Date has to be a future value</errorMessage>
</ValidationRule>